# water-johor-chatbot

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: agent.py  docker-compose.yml  local_plugins.py  main.py  pyproject.toml  requirements.txt  run_backend.sh  test_prompt.py
backend/scripts/: download_models.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.tsx  AquaChat.jsx  AquaChat.tsx  LiveMode.jsx  LiveMode.tsx  ProfilePage.tsx  index.css
frontend/src/components/: PlumberConnectionModal.tsx  ReportModeBanner.tsx
frontend/src/data/: plumbers.ts
frontend/src/services/: api.js
frontend/src/types/: index.ts
